# src/api-doc/api-doc.yaml
@@ -1258,6 +1258,162 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/organization/requestOrgRole200Response'
+  /user/v1/userRole/readUserRolesBasedOnEntityType:
+    get:
+      summary: Read User Roles Based on Entity Type
+      tags:
+        - User Roles APIs
+      description: >-
+        Retrieve user roles based on entity type
+
+        * Endpoint: ``` /user/v1/userRole/``readUserRolesBasedOnEntityType ```
+
+        * It is mandatory to provide values for parameters marked as `required`.
+
+        * The X-auth-token obtained from the login API is required in the
+        header.
+      parameters:
+        - name: X-auth-token
+          in: header
+          description: X-auth-token obtained from the login API response.
+          required: true
+          schema:
+            type: string
+        - name: internal_access_token
+          in: header
+          schema:
+            type: string
+          example: '{{internal_access_token}}'
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $schema: http://json-schema.org/draft-04/schema#
+                type: object
+                properties:
+                  responseCode:
+                    type: string
+                  message:
+                    type: string
+                  result:
+                    type: object
+                    properties:
+                      data:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: number
+                            title:
+                              type: string
+                            user_type:
+                              type: number
+                            visibility:
+                              type: string
+                            status:
+                              type: string
+                            organization_id:
+                              type: number
+                          required:
+                            - id
+                            - title
+                            - user_type
+                            - visibility
+                            - status
+                            - organization_id
+                      count:
+                        type: number
+                  meta:
+                    type: object
+                    properties:
+                      formsVersion:
+                        type: array
+                        items:
+                          type: string
+                      correlation:
+                        type: string
+              examples:
+                example1:
+                  value:
+                    responseCode: OK
+                    message: Roles fetched successfully
+                    result:
+                      data:
+                        - id: 13
+                          title: AMO
+                          user_type: 1
+                          visibility: PUBLIC
+                          status: ACTIVE
+                          organization_id: 1
+                        - id: 15
+                          title: TEACHER
+                          user_type: 1
+                          visibility: PUBLIC
+                          status: ACTIVE
+                          organization_id: 1
+                        - id: 10
+                          title: headmaster
+                          user_type: 1
+                          visibility: PUBLIC
+                          status: ACTIVE
+                          organization_id: 1
+                        - id: 14
+                          title: BEO
+                          user_type: 1
+                          visibility: PUBLIC
+                          status: ACTIVE
+                          organization_id: 1
+                      count: 4
+                    meta:
+                      formsVersion: []
+                      correlation: 9355fd49-5f88-4823-b97a-ae5be4529c2e
+        '500':
+          description: Internal-Server-Error
+          content:
+            application/json:
+              schema:
+                $schema: http://json-schema.org/draft-04/schema#
+                type: object
+                properties:
+                  responseCode:
+                    type: string
+                  message:
+                    type: string
+                  meta:
+                    type: object
+                    properties:
+                      correlation:
+                        type: string
+              examples:
+                example1:
+                  value:
+                    responseCode: SERVER_ERROR
+                    message: Oops! Something Went Wrong.
+                    meta:
+                      correlation: 05ccfc46-64d9-4329-a1c9-cfe35bafb69d
+      requestBody:
+        description: ''
+        content:
+          application/json:
+            schema:
+              $schema: http://json-schema.org/draft-04/schema#
+              type: object
+              properties:
+                entityTypeId:
+                  type: array
+                  items:
+                    type: string
+            examples:
+              example1:
+                value:
+                  entityTypeId:
+                    - 5f32d8228e0dc8312404056b
+                    - 5f32d8228e0dc8312404056c
+                    - 5f32d8228e0dc83124040567
   /user/v1/userRole/list:
     get:
       summary: Get User Roles
